bots update
